<resources>
    <string name="app_name">FilePlayground</string>
    <string name="camera">Camera</string>
    <string name="show_image">Show Image</string>
    <string name="des_show_image">Belajar menampilkan gambar yang diambil dari camera atau galerry</string>
    <string name="show_video">Show Video</string>
    <string name="belajar_menampilkan_video_yang_diambil_dari_camera_atau_gallery">Belajar menampilkan video yang diambil dari camera atau gallery</string>
    <string name="gallery">gallery</string>
    <string name="makanan">MAKANAN</string>
    <string name="nama">Nama</string>
    <string name="jumlah">jumlah</string>
    <string name="minuman">MINUMAN</string>
    <string name="multiple_viewtype_desc">Recylerview (multiple view type)</string>
    <string name="desc_show_recylerview">Belajar membuat recylerview dengan multiple view type</string>
    <string name="custom_record_video">custom record video</string>
    <string name="belajar_membuat_custom_video_view">belajar membuat custom video view</string>
    <string name="show_timer">Show Timer</string>
    <string name="berlajar_membuat_timer">Berlajar membuat timer</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="done">Done !</string>
</resources>